--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,5 +25,6 @@ jobs:
       - name: Check the links
         uses: lycheeverse/lychee-action@v1
         with:
+          args: --accept '100..=103, 200..=299, 403'
           fail: true
           token: ${{ secrets.GITHUB_TOKEN }}
