--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,6 @@ jobs:
       - name: Check the links
         uses: lycheeverse/lychee-action@v1
         with:
-          args: --accept '100..=103, 200..=299, 403'
+          args: --accept '100..=103, 200..=299, 403' --base . --verbose --no-progress './**/*.md'
           fail: true
           token: ${{ secrets.GITHUB_TOKEN }}
